# redbirdpy

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: check-pypi-upload.sh
.github/workflows/: run_test.yml
example/: demo_redbird_basic.py  demo_redbird_forward.py  demo_redbird_forward_expert.py  demo_redbird_forward_heterogeneous.py  demo_redbird_forward_layered.py  demo_redbird_heterogeneous.py  demo_redbird_recon.py  demo_redbird_recon_expert.py  demo_redbird_recon_widefield.py  demo_redbird_widefield.py
redbird/: __init__.py  analytical.py  forward.py  property.py  recon.py  solver.py  utility.py
redbirdpy/: __init__.py  forward.py  property.py  recon.py  solver.py  utility.py
test/: run-tests.py  test-forward.py  test-integration.py  test-property.py  test-recon.py  test-utility.py  test_analytical.py  test_forward.py  test_init.py  test_integration.py  test_property.py  test_recon.py  test_solver.py  test_utility.py  test_widefield.py
