[metadata]
description-file = README.md

[bdist_wheel]
universal = 0

[options]
zip_safe = True
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info
ignore = E501,W503,E203

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[coverage:run]
source = redbird
branch = True
omit =
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
show_missing = True
